# DeformationSample

./: CMakeLists.txt  PatientDeform.cc  cuboid.ply  cuboid.tgf  main.cpp  outer.ply  patient.tgf
